reworked unteil cakra 6 and annotated the first 57 chapters

--- a/bindu.bib
+++ b/bindu.bib
@@ -1,3 +1,39 @@
+@book{samgitaratna, 
+ title={Saṃgītaratnākara},
+ subtitle={Saṃgītaratnākara of Śārṅgadeva: with the Kalānidhi of Kallinātha and the Sudhākara of Siṃhabhūpāla},
+ editor={Sarada, S.}, 
+ year={1900},
+ publisher={Adyar Library and Research Centre, Theosophical Pub. House},
+ address={Chennai},
+ note={in Sanskrit - 2nd ed.},
+ keywords={printed},
+}
+
+@book{ramayana, 
+title={Rāmāyaṇa}, 
+subtitle={The Vālmīki - Rāmāyaṇa: Critical Edition}, 
+author={Vālmīki},
+editor={Bhatt, G.H.}, 
+year={2001}, 
+publisher={Oriental Institute Vadodara}, 
+address={Baroda}, 
+keywords={printed},
+}
+
+
+@book{mainkar2004, 
+title={Sāṃkhyakārikā}, 
+subtitle={Sāṃkhyakārikā of Īśvarakṛṣṇa - With the Commentary of Gauḍapāda - Translated into Endlish with an Exhaustive Introcution and Notes}, 
+year={2004}, 
+editor={Mainkar, T.G.}, 
+series={The Vrajajivan Indological Studies}, 
+volume={36},
+publisher={Chaukhamba Sanskrit Pratishthan},
+address={Delhi}, 
+keywords={printed},
+}
+
+
 @book{shastri1950,
   title={The Śivapurāṇa - Part I},
   author={Shastri, J.L.},
@@ -251,6 +287,14 @@ vārttikamarīcibhiḥ sahitaḥ},
   keywords={printsource},
 }
 
+@book{gonda1965,
+title={Change and Continuity in Indian Religion}, 
+author={Gonda, Jan}, 
+year={1965}, 
+publisher={Mouton & Co}, 
+address={The Hague}, 
+} 
+
 @book{hathapradipika2024,
   title={Haṭhapradīpikā},
   subtitle={Light on Haṭha: Haṭhapradīpikā - Critical Edition and annotated Translation (Forthcoming)},
@@ -301,7 +345,8 @@ vārttikamarīcibhiḥ sahitaḥ},
 }
 
 @book{yogasutra,
-  title={Yoga Philosophy of Patañjali},
+  title={Pātañjalayogaśāstra},
+  subtitle={Yoga Philosophy of Patañjali},
   editor={Hariharānanda Āraṇya},
   year={1983},
   publisher={State University of New York Press},
@@ -336,6 +381,16 @@ keywords={printsource},
   keywords={seclit},
 }
 
+@book{paratrishi, 
+  title={Parātrīśikhāvivaraṇa}, 
+  subtitle={of Abhinavagupta}, 
+  translator={Singh, Jaideva}, 
+  editor={Bäumer, Bettina}, 
+  note={Sanskrit text corrected and annotated by Swami Lakshmanjee}, 
+  year={1988}, 
+  publisher={Motilal Banarsidass}, 
+  address={Delhi}, 
+}
 
 @book{tagare1983,
   title={Brahmāṇḍa Purāṇa},
@@ -406,6 +461,23 @@ keywords={printsource},
   address={Delhi},
   keywords={seclit},
 }
+
+@book{avalon, 
+ title={The Serpent Power}, 
+ author={Avalon (Sir John Woodroffe), Arthur}, 
+ year={1950},
+ note={Fourth Edition}, 
+ publisher={Ganesh & Co. Ltd.},
+ address={Madras}, 
+ keywords={seclit}, 
+}  
+  
+@book{satcakraniru,
+   title={Ṣaṭcakranirūpaṇa},
+   note={see The Serpent Power}, 
+   keywords={printed},
+}
+
 
 @article{sinha1976,
   title={Problem of Time and Temporality in Sāṃkhya-Yoga and Ābhidharma Buddhism},
@@ -543,6 +615,17 @@ Sound},
   keywords={seclit},
 }
 
+@article{birch2014,
+ title={Rājayoga: Reincarnations of the King of All Yogas},
+ author={Birch, Jason},
+ year={2014},
+ publisher={Springer},
+ series={International Journal of Hindu Studies 17, 3 (2013)}, 
+ pages={401–444}, 
+ keywords={seclit},
+ }
+
+
 @online{dbhutrans,
   editor={Narayanasvami Aiyar, K},
   title={Translation of Dhyana-Bindu Upanishad},
@@ -633,7 +716,16 @@ Sound},
   volume={1},
   publisher={Harvard University Press},
   address={Cambridge},
-  keywords={printed},
+  keywords={printsource},
+}
+
+@book{rigvedaglossar,
+  title={Der Rigveda in Auswahl},
+  subtitle={Erster Teil. Glossar.}, 
+  author={Geldner, Karl Friedrich},
+  year={1907},
+  address={Stuttgart},
+  keywords={printsource},
 }
 
 @book{sircar1966,
@@ -719,6 +811,16 @@ publisher={Kaivalyadhama S.M.Y.M. Samiti},
 address={Lonavla}, 
 keywords={printsource}, 
 } 
+
+@book{amaraughasasana, 
+title={Amaraughaśāsana}, 
+subtitle={Amaraughaśāsana of Gorakṣanātha},
+editor={Mukund Ram Shastri, P.}, 
+series={KSTS},
+volume={20},
+year={1918}, 
+address={Srinagar}, 
+}
 
 @book{spandakarika, 
 title={Spandakārikā}, 
@@ -813,7 +915,16 @@ keywords={printsource},
  keywords={seclit}, 
 }
 
-
+@book{kissmatsya, 
+  title={Matsyendrasaṃhitā}, 
+  subtitle={The Yoga of the Matsyendrasaṃhitā - A Critical Edition and Annotated Translation of Chapters 1-13 and 55}, 
+  author={Kiss, Csaba}, 
+  year={2021}, 
+  publisher={École française d’Extrême-Orient},
+  address={Pondicherry},
+  series={Collection Indologie 146, Haṭha Yoga Series 1},
+  keywords={printsource},
+} 
 
 @book{mallinson2012hatha,
    title={Yoga: Haṭha Yoga},
@@ -1333,6 +1444,16 @@ address={Pondicherry},
     keyword={printsource},    
 }
 
+@book{sarvadurga,
+    title={Sarvadurgatipariśodhanatantra},
+    subtitle={The Sarvadurgatiparisodhana Tantra, Elimination of All Destinies, Sanskrit and Tibetan Texts with Introduction, English Translation and Notes.}, 
+    editor={Skorupski, Tadeusz},
+    year={1983},
+    address={Delhi},
+    publisher={Motilal Banarsidass},
+    keyword={printsource},    
+}
+
 @misc{rudra,
     note={Rudrayamalam: uttara-tantram: \cite{rudrayamala1937}},
     shorthand={RMT},
@@ -1388,6 +1509,14 @@ address={Pondicherry},
    keywords={critEd},
 }
 
+@book{kularnavatantra, 
+ title={Kulārṇavatantra}, 
+ editor={Vidyāratna, Tārānātha}, 
+ series={Tantrik Texts 5 (ed. Arthur Avalon)}, 
+ year={1965}, 
+ publisher={Ganesh and Company},
+ address={Madras}, 
+} 
 
 @article{kalika,
  author = {Hazra, R. C.},
@@ -1413,15 +1542,34 @@ address={Pondicherry},
 keywords={seclit},
 }
 
+@article{reigle2012, 
+author={Reigle, David}, 
+journal={Journal of the Royal Asiatic Society}, 
+series={3}, 
+volume={22 (2)}, 
+pages={439-63},
+year={2012},  
+title={The Kālacakra Tantra on the Sādhana and Maṇḍala},
+address={Cambridge}, 
+keywords={seclit},
+}   
+
 @codex{codexbmt,
    title={Brahmayāmalatantra},  
    %author={Unbekannt},
    address={National Archives Kathmandu},
-   note={NAK MS 3–370, NGMPP Reel No.A 42/6. Palm-leaf, Newari Script},
+   note={NAK MS 3–370, NGMPP Reel No. A 42/6. Palm-leaf, Script: Nevārī},
    keywords={codex},
 }
 
 
+@codex{rajayoga, 
+  title={Rājayogaḥ},
+  author={Śrī Agasthyamaunīndra},
+  address={ Government Oriental Manuscript Library, Madras University},
+  note={R 17980, Transcribed by Jason Birch},
+  keywords={codex},
+}  
 
 @codex{vivekamartandaolda,
    title={Vivekamārtaṇḍa},  
@@ -1431,6 +1579,12 @@ keywords={seclit},
    keywords={codex},
 }
 
+@codex{urmikaula, 
+  title={Ūrmikaulārṇavatantra},
+  address={National Archives Kathmandu},
+  note={Nak MS 5-5207, (sic. 5-5202);  NGMPP reel No. B 115/9; folio no: 83. siśe: 27 x  9 cm. Script: Nevārī}, 
+  keywords={codex}, 
+}
 
 @codex{hathasamketacandrikajodhpur,
    title={Haṭhasaṃketacandrikā},  
@@ -1480,6 +1634,15 @@ keywords={seclit},
   keywords={seclit},
 }
 
+@book{petersburger2,
+  title={Sanskrit Wörterbuch},
+  author={Boethling, O. und Roth, R.},
+  year={1858},  
+  volume={2},
+  address={Petersburg},
+  keywords={seclit},
+}
+
 @book{petersburger3,
   title={Sanskrit Wörterbuch},
   author={Boethling, O. und Roth, R.},
@@ -1515,6 +1678,15 @@ keywords={seclit},
  publisher={Varanasi Caukhamba Samskrita Sirija Aphisa}, 
  keywords={seclit}, 
  volume={5}, 
+}
+
+@book{aryan, 
+ title={The Little Goddesses (Matrikas)}, 
+ author={Aryan, K.C.}, 
+ year={1980}, 
+ address={New Delhi}, 
+ publisher={Rekha Prakashan}, 
+ keywords={seclit},
 }
 
 @book{yogatarangini,
@@ -1929,6 +2101,18 @@ subtitle={The Niśvāsatattvasaṃhitā: The Earliest Surviving Śaiva Tantra},
    keywords={printsource},
 }
 
+@book{pandey1963,
+   title={Abhinavagupta: An Historical and Philosophical Study},
+   author={Pandey, K.C.},
+   year={1963},
+   series={Chowkhamba Sanskrit Studies},
+   volume={1},
+   note={2d ed., rev. and enl.},  
+   publisher={Chowkamba Sanskrit Series Office},
+   address={Varanasi},
+   keywords={printsource},
+}
+
 @book{schmidtnachtrag,
 title={Nachträge zum Sanskrit-Wörterbuch in kürzerer Fassung von Otto Böhtlingk},
 author={Schmidt, Richard},
@@ -2079,9 +2263,9 @@ address={Delhi},
 @online{bhedabheda, 
   title={Bhedābheda Vedānta},
   author={Nicholson, Andrew J.}, 
-  publisher={ Internet Encyclopedia of Philosophy (IEP) (ISSN 2161-0002)}
-  howpublished = {\url{https://web.archive.org/web/20231006075017/https://iep.utm.edu/bhedabheda-vedanta/}}, 
-  note = {\url{https://web.archive.org/web/20231006075017/https://iep.utm.edu/bhedabheda-vedanta/}; Saved on archive.org: 06.10.2023},  
+  publisher={Internet Encyclopedia of Philosophy (IEP) (ISSN 2161-0002)},
+  howpublished={\url{https://web.archive.org/web/20231006075017/https://iep.utm.edu/bhedabheda-vedanta/}}, 
+  note={\url{https://web.archive.org/web/20231006075017/https://iep.utm.edu/bhedabheda-vedanta/}; Saved on archive.org: 06.10.2023},  
   keywords={onlinesource}, 
 }
 
