--- a/voredition.tex
+++ b/voredition.tex
@@ -99,6 +99,36 @@ Thousands of crores of resonances and hundreds of crores of visual focal points,
 \label{yogas_list}
 The authenticity of the list specifying the fifteen Yogas at the beginning of the text is ambiguous. This is due to the discrepancy between the structure of the Yogas presented in the text and the order presented in the list. For example, the text commences with a description of \textit{kriyāyoga} and goes on to describe \textit{siddhakuṇḍaliniyoga} and then mentions \textit{mantrayoga} without adhering to the order presented in the list. This incongruity raises questions as to why the text structure deviates from the list. However, the reference to \textit{jñānotpattav upāyaḥ} may provide some insight into why \textit{jñānayoga} is included as the second \textit{yoga} in the list. To reconcile these apparent inconsistencies, there are several possible explanations: 1) The text is severely corrupted. 2) The list was added by a different hand at a later time. 3) The term \textit{jñānayoga} is included as a result of the practice of \textit{siddhakuṇḍalinīyoga}, which is said to generate knowledge through the central channel, as stated in the text. These explanations may be combined to provide a comprehensive understanding of the situation.
 
+\note[type=philcomm, labelb=_1e, labele=_1e, lem={urayogaḥ}]{The term \textit{urayoga} in YSv (PT) is uncertain. Birch suggests it might result from a corruption of \textit{lakṣyayoga} since it appears in the text. However, explaining the origin of the corruption is complex. Sellmer speculates it could be an abbreviation of \textit{uragayoga} (``Snake Yoga''), possibly a synonym for \textit{kuṇḍalinīyoga}, but this is problematic as the term is unattested elsewhere.} 
+
+
+\chapter{Uncovering the Fundamental Teachings of Yogatattvabindu: A Textual Network}
+
+\begin{itemize}
+\item Netratantra
+\item Śāradatilakatantra
+\item Sarvadurgatipariśodhanatantra
+\item Ūrmikaulārṇavatantra
+\item Tantrāloka
+\item Manthanabhairavatantra
+\item Śārṅgadhārapaddhati 
+\item Vivekamārtaṇḍa
+\item Śivayogapradīpikā
+\item (Haṭhapradīpikā)
+\item Amaraughaśāsana
+\item Yogasvarodaya
+\item Sarvāṅgayogapradīpikā
+\item Nityanāthapaddhati  
+\item Siddhasiddhāntapaddhati
+\item Yogatattvabindu 
+\item Yogacūḍāmaṇyupaniṣad
+\item Maṇḍalabrāhmaṇopaniṣat
+\item Haṭhatattvakaumudi
+\item Haṭhasaṃketacandrikā
+\end{itemize}
+
+see Netra tantra Intro Bäumer p.43 ff
+
 \section{Lakṣyayoga}
 
 \begin{itemize}
@@ -180,7 +210,10 @@ Lists are a frequent feature in the \textit{Yogatattvabindu}. The text opens wit
 
 \section{Yogasvarodaya}
 
-Note: Mention the parallels to \citetitle{sarada} and how here \textit{svarodaya} plays an important role in the system of yoga. Also there seems to be some distant influence. I think originally there might have been was a larger section of svarodaya or even a chapter in the Yogasvarodaya which was not quoted in PT and YK!! 
+Note: Mention the parallels to \citetitle{sarada} and how here \textit{svarodaya} plays an important role in the system of yoga. Also there seems to be some distant influence. I think originally there might have been was a larger section of svarodaya or even a chapter in the Yogasvarodaya which was not quoted in PT and YK!!
+
+
+list 
 
 \section{Śivayogapradīpikā}
 In the \citetitle{shivayogapradipika} 4.41cd-47ab we find descriptions closely resembling those of \citetitle{advaya}:
@@ -202,6 +235,7 @@ ity anekavidhākāraṃ bahirlakṣyam udīritam |\\
 Revise translation! see Powell 2023! 
 
 ``(41cd) That was the inner fixation. Now hear the external fixation that needs to be understood.(42) From the tip of the nose, counting with four, six, ten, and twelve, using the numerical system of the fingers. The five elements in [the colours of] outdoor blue, intense grey, wave of red and yellow mystery. (43) Alternatively, one may gaze steadily towards the space [directly] in front of [the face]. Luminous rays are perceived by steadfast-minded yogins. (44) In front of the gaze or at the outer corner of the eye space, resembling the shine of molten gold, the gaze should be fixed on the ground - [thus] stability arises for the yogin. (45) Alternatively, above the head, with a [distance of] twelve finger-breadths, one should fixate the formless cluster of light, which bestows liberation. (46) Wherever the yogin is suitable to the object, there he should fixate only space, in order for his mind to becomes as such. (47ab) Thus, various external fixations have been mentioned.''
+
 \section{Netratantra}
 
 Netratantra
@@ -253,6 +287,13 @@ further details or interpretations of the verses, for example, supplying the man
 Śivayogapradīpikā 1.5. 339 The text thus provides an intriguing early modern example of the adapation of
 yoga in a non-ascetic and courtly environment. page 146 in Powell 2023
 
+\section{Amaraughaśāsana}
+
+Perhaps the earliest Nāth work on Haṭha Yoga
+from northwest India is the Amaraughaśāsana,
+whose oldest manuscript is dated 1525 CE.
+
+Mallinson Nāth Sampradaya 2011 
 \chapter{notes}
 4.9.6 The Śivatattvaratnākara
 The Śivatattvaratnākara is a large compendium attributed to a king named Keḷadi Basavabhūpāla (also
