--- a/bindu.tex
+++ b/bindu.tex
@@ -160,255 +160,385 @@ Herstellung: \ \ BoD – Books on Demand GmbH, Norderstedt  \\
 \chapter{Critical Edition \& Annotated Translation}
 \cleardoublepage
 \begin{alignment}[
-    texts=edition[class="edition"];
-    translation[class="translation"],
+  texts=edition[class="edition"];
+  translation[class="translation"],
   ]
-\begin{edition}
-  \ekddiv{type=ed}
- \ekddiv{
- head={[\uproman{1}. \textbf{rājayogaprakāra}]},
-type=section,
- depth=2,
- n=I
-}
-\label{intro}
-\begin{prose}
-\noindent  
-%--------------------------
-% śrī gaṇeśāya namaḥ /                                                     rājayogāntargataḥ //  binduyogaḥ   \E 
-% śrī gaṇeśāya namaḥ /                                                     atha tattvabiṃduyogaprāraṃbhaḥ     \L
-% śrī ṇe ya maḥ /                                                          atha rājayoga         liṣyate      \P
-% \om                                                                                                         \B      
-% śrī gaṇeśāya namaḥ // śrī gurave namaḥ //                                atha rājayogaprakāro  likhyate //  \N1
-% śrī gaṇeśāya namaḥ //                                                //  atha rājayogaprakāro  likhyate //  \N2
-% śrī gaṇeśāya namaḥ // śrī sarasvatyai namaḥ // śrī nirañjanāya namaḥ //  atha rājayogaprakāro  likhyate //  \D
-% śrī gaṇeśāya namaḥ /  oṃ śrī niraṃjanāya //                              atha rājayogaprakāra  likhyate //  \U1
-% śrī gaṇeśāya namaḥ /                                                     atha rājayoga         likhyate //  \U2
-%--------------------------
-%Homage to Śrī Gaṇeśa. Now, the way of Rājayoga is laid down.
-%--------------------------          
-\note[type=source, labelb=_11b,labele=_11e, nosep]{cf. YSv (PT p. 831): atha rājayogaḥ || yogasvarodaye | īśvara uvāca | rājayogaṃ pravakṣyāmi śṛṇu sarvatra siddhidam | guhyādguhyataraṃ devi nānādharmaṃ parāt param rājayogena deveśi nṛpapūjyo bhaven naraḥ | rājayogī cirāyuś ca aṣṭaiśvaryamayo bhavet ||}
-\app{\lem[wit={ceteri}]{śrī gaṇeśāya namaḥ}
-        \rdg[wit={P}]{śrī ṇe ya maḥ}
-        \rdg[wit={N1}]{śrī gaṇeśāya namaḥ || śrī gurave namaḥ ||}
-        \rdg[wit={D}]{śrī gaṇeśāya namaḥ || śrī sarasvatyai namaḥ || śrī nirañjanāya namaḥ ||}
-        \rdg[wit={U1}]{śrī gaṇeśāya namaḥ || oṃ śrī niraṃjanāya ||}}\dd{}
-\app{\lem[wit={N1,N2,D}]{atha rājayogaprakāro likhyate}
-        \rdg[wit={U1}]{atha rājayogaprakāra likhyate}
-        \rdg[wit={E}]{rājayogāntargataḥ || binduyogaḥ}
-        \rdg[wit={L}]{atha tattvabiṃduyogaprāraṃbhaḥ}
-        \rdg[wit={P}]{atha rājayoga liṣyate}
-        \rdg[wit={U2}]{atha rājayoga likhyate}}/ 
-%-------------------------- 
-% \om                        \E
-% \om                        \L
-% \om                        \B
-% rājayogasyedaṃ phalaṃ      \P
-% rājayogasya idaṃ phalaṃ    \N1
-% rājayogasya idaṃ phalaṃ    \N2
-% rājayogasya idaṃ phalaṃ // \D
-% rājayogasya idaṃ phalaṃ    \U1
-% rājayogasyedaṃ phalaṃ /    \U2
-%--------------------------    
-\app{\lem[wit={P,U2}]{rājayogasyedaṃ phalaṃ}
-  \rdg[wit={N1,N2,D}]{rājayogasya idaṃ phalaṃ}
-  \rdg[wit={E,L}]{\om}}/
-%--------------------------
-%This is the result of \textit{rājayoga}:
-%--------------------------
-% \om                                                                                                                                                                         \E
-% \om                                                                                                                                                                         \L
-% \om                                                                                                                                                                         \B
-% yena rājayogenāneka---rājyabhogasamaya   eva   anekapārthivavinodaprekṣaṇasamaya  eva   bahutarakālaṃ  śarīrasthitir  bhavati    sa eva  rājayogaḥ tasyaite     bhedāḥ      \P
-% yena rājayogenāneka---rājyabhogasamaya   eva/  anekapārthivavinodaprekṣaṇasamaya  eva/  bahutarakālaṃ  śarīrasthitir  bhavati    sa eva  rājayogaḥ /  tasya ete bhedāḥ /    \N1
-% yena rājayogena  anekarājyabhogasamaya   eva// anekapārthivavinodaprekṣaṇasamaya  eva   bahuttarakālaṃ śarīrasthitir  bhavati    sa eva  rājayogaḥ /  tasya ete bhedāḥ /    \N2
-% yena rājayogena  anekarājyabhogasamaya   eva// anekapārthivavinodaprekṣaṇasamaya  eva// bahutarakālaṃ  śarīrasthitir  bhavati//  sa eva  rājayogaḥ // tasya ete bhedāḥ /    \D
-% yena rājayogena  anekarājyabhogasamaya   eva// anekapārthivavinodaprekṣaṇasamaya  eva// bahutarakālaṃ  śarīrasthitir  bhavati    sa evaṃ rājayogaḥ    tasya ete bhedāḥ //   \U1 
-% yena rājayogena  anekarājyabhogasamaya   eva// anekapārthivavinodaprekṣyaṇasamaya eva// bahutarakālaṃ  śarīrasthitir  bhavati//  sa eva  rājayogastaisyaite     bhedāḥ //   \U2
-% --------------------------
-%\textit{Rājayoga} is that by which longterm durability of the body arises even amongst manifold royal pleasures even amongst the manifold royal entertainments and spectacle. This truly is \textit{rājayoga}. Of this [\textit{rājayoga}] these are the varieties: \end{tlate}
-%--------------------------
-yena rāja\app{\lem[wit={P,N1}, alt={°yogenāneka°}]{yogenāneka}
-  \rdg[wit={D,N2,U1,U2}]{°yogena aneka°}
-}rājyabhogasamaya eva/ anekapārthivavinoda
-      \app{\lem[wit={ceteri}]{prekṣaṇasamaya}
-        \rdg[wit={U2}]{prekṣyaṇasamaya}}
-      eva/ bahutarakālaṃ śarīrasthitir-bhavati/
-      sa \app{\lem[wit={ceteri}]{eva}
-        \rdg[wit={U2}]{evaṃ}}
-      \app{\lem[wit={ceteri}]{rājayogaḥ}
-        \rdg[wit={U2}]{rājayogas}}/\linelabel{_11e} 
-      \app{\lem[wit={P,U2}]{tasyaite}
-        \rdg[wit={ceteri}]{tasya ete}} bhedāḥ/
-        \note[type=source, labelb=1b, labele=_1e, nosep]{cf. YSv (PT p. 831): pañcadaśaprakāro 'yaṃ rājayogaḥ || kriyāyogo jñānayogaḥ karmayogo haṭhas tathā | dhyānayogo mantrayoga urayogaś ca vāsanā |  rājaty etad brahmavaśīva ebhiś ca pañcadaśadhā | idānīṃ lakṣaṇañ caiṣāṃ kathayāmi śṛṇu priye |}
-        \note[type=testium, labelb=1b, labele=_1e, nosep]{ cf. \textit{Yogasiddhāntacandrikā} (Ed. p. 2): nididhyāsanañ caika tānatādirūpo rājayogāparaparyāyaḥ samādhiḥ | tatsādhanaṃ tu kriyāyogaḥ, caryāyogaḥ, karmayogo, haṭhayogo, mantrayogo, jñānayogaḥ, advaitayogo, lakṣyayogo, brahmayogaḥ, śivayogaḥ, siddhiyogo, vāsanāyogo, layayogo, dhyānayogaḥ, premabhaktiyogaś ca |}
+  \begin{edition}
+    \ekddiv{type=ed}
+    \begin{tlg}
+      \noindent
+  \note[type=source, labelb=418, nosep]{cf. YSv (PT p. 847): idaṃ yogarahasyañ ca na vācyaṃ mūrkhasannidhau || yogadeśas tu tatraiva ||}
+%-----------------------------
+%na snehān na bhayān na lobhān na mohān na dhanād   balān    na maitrībhāvān  nau dāryān na sauṃdaryān na sevanāt/ \E
+%na snehān no bhayāl lno?                                             bhāvān  no  dānān  na sau daryān na sevanāt  \P %%%7680.jpg
+%ni śnehān nā bhayāl lobhān    na mohān na dhanād   balāt/   na maitrībhāvān  no  dānāt  na sauṃdaryān na sevanāt/ \B
+%ni śnehān nā bhayāl lobhān    na mohān na nadhanād balāta// na maitrībhāvān  no  dānāt  na sauṃdayan  ni sevanāt// \L
+%na śnehān a  bhayāl obhān     na mohān na dhanād   balāt/   na maitrībhāvān  na  dāsān  na sauṃdaryān na sevanāt/ \N1
+%na śnehān a  bhayāl obhān     na mohān na dhanād   balāt//  na maitrībhāva   nā  dānān  na saudaryān  na sevanāt// 1 \N2
+%na śnehān a  bhayāl lobhān    na mohān na dhanād   balāt/   na maitrī                                                \D
+%na śnehān na bhayān lobhān    na mohān na dhanāt   balāt    na maitrībhāvān  na  dāsān  na sauṃdaryān na sevatā \U1
+%na snehān na bhayāl lon       na mohān na dhanād   balāt//  na maitrībhāvān  no  dānān  na sauṃdaryān na sevanāt// \U2
+%-----------------------------
+%Not because of love, not because of fear, not because of greed, not because of gift, not because of friendship, not because of hostility, not because of nobility, not because of service, 
+%-----------------------------12
+  \tl{\app{\lem[wit={ceteri}]{na}
+      \rdg[wit={B,L}]{ni}}
+    \app{\lem[wit={E,P,U2},alt={snehān}]{snehā\skp{n-na}}
+      \rdg[wit={ceteri}]{śnehān}
+    }\app{\lem[wit={E,P,U2},alt={na}]{\skm{n-na}}
+      \rdg[wit={B,L}]{nā}
+      \rdg[wit={D,N1,N2}]{a}
+    }\app{\lem[wit={ceteri},alt={bhayāl}]{bhayā\skp{l-lo}}
+      \rdg[wit={E,U1}]{bhayān}
+    }\app{\lem[wit={B,D,L,U1},alt={lobhān}]{\skm{l-lo}bhā\skp{n-na}}
+      \rdg[wit={N1,N2}]{obhān}
+      \rdg[wit={P}]{lno}
+      \rdg[wit={U2}]{lon}
+    }\app{\lem[wit={ceteri},alt={na}]{\skm{n-na}}
+      \rdg[wit={P}]{\om}
+    }\app{\lem[wit={ceteri},alt={mohān}]{mohā\skp{n-na}}
+      \rdg[wit={P}]{\om}
+    }\app{\lem[wit={ceteri},alt={na}]{\skm{n-na}}
+      \rdg[wit={P}]{\om}
+    }\app{\lem[wit={ceteri}]{dhānā\skp{d-ba}}
+      \rdg[wit={L}]{na dhanād}
+      \rdg[wit={P}]{\om}
+    }\app{\lem[wit={ceteri},alt={balāt}]{\skm{d-ba}lāt}
+      \rdg[wit={B}]{balāta}
+      \rdg[wit={P}]{\om}}/}\\
+  \tl{\app{\lem[wit={ceteri}]{na}
+      \rdg[wit={P}]{\om}}
+    \app{\lem[wit={ceteri},alt={maitrībhāvān}]{maitrībhāvā\skp{n-na}}
+      \rdg[wit={N2}]{maitrībhāva}
+      \rdg[wit={D}]{maitrī}
+      \rdg[wit={P}]{bhāvān}
+    }\note[type=philcomm, labelb=418, lem={maitrī \ldots}]{A lenghty omission starts in \getsiglum{D} after the word \textit{maitrī}. The single omissions will not be recorded in the critical apparatus. The reader will be informed once the evidence of \getsiglum{D} resumes.}\app{\lem[wit={N1,U1},alt={na}]{\skm{n-na}}
+      \rdg[wit={B,L,P,U2}]{no}
+      \rdg[wit={E}]{nau}
+      \rdg[wit={N2}]{nā}
+      \rdg[wit={D}]{\om}}
+    \app{\lem[wit={N1,U1},alt={dāsān}]{dāsā\skp{n-na}}
+      \rdg[wit={P}]{dānān}
+      \rdg[wit={E}]{dāryān}
+      \rdg[wit={B,L}]{dānāt}
+      \rdg[wit={N2,U2}]{dānān}
+      \rdg[wit={D}]{\om}
+    }\app{\lem[wit={ceteri},alt={na}]{\skm{n-na}}
+      \rdg[wit={D}]{\om}
+    }\app{\lem[wit={ceteri},alt={sauṃdaryān}]{sauṃdaryā\skp{n-na}}
+      \rdg[wit={P,N2}]{saudaryān}
+      \rdg[wit={L}]{sauṃdayan}
+      \rdg[wit={D}]{\om}
+    }\app{\lem[wit={ceteri},alt={na}]{\skm{n-na}}
+      \rdg[wit={L}]{ni}
+      \rdg[wit={D}]{\om}}
+    \app{\lem[wit={ceteri}]{sevanāt}
+      \rdg[wit={U1}]{sevatā}}\dd{} \begin{otherlanguage}{english}\uproman{53}.1\end{otherlanguage}\hskip-2pt\dd{}}\\
+\end{tlg}
+  \begin{prose}
+%-----------------------------
+%sāmānyāgre     yogo na kathanīyaḥ/ \E
+%sāmānyād agre  yogo na kathanīyaḥ \P
+%sāmānyāgre     yogo na kathaniyaṃ/ \B
+%sāmānyāgre     yogo na kathanīyaṃ// \L
+%sāmānyād agre  yogo na kathanīyaḥ/ \N1
+%sāmānyād agre  yogo na kanīyaḥ/ \N2
+%\om \D
+%sāmānyāgre     yogo na kathanīyaḥ \U1
+%sāmānyād agre  yogo na kathanīyaḥ \U2
+%-----------------------------
+%shall yoga be taught in front of everyone. 
+%-----------------------------13
+\app{\lem[wit={P,N1,N2,U2}]{sāmānyād\skp{-}agre}
+  \rdg[wit={B,E,L,U1}]{sāmānyāgre}}
+yogo na
+\app{\lem[wit={E,P,N1,U1,U2}]{kathanīyaḥ}
+  \rdg[wit={B}]{kathaniyaṃ}
+  \rdg[wit={L}]{kathanīyaṃ}
+  \rdg[wit={N2}]{kanīyaḥ}}/ 
+%-----------------------------
+%yaḥ paraniṃdā  rato bhavati/ \E
+%yaḥ paraniṃdā  rato bhavati \P
+%yaḥ paraniṃdāṃ      karoti/ \B
+%yaḥ paraniṃdāṃ      karoti \L
+%yaḥ paraniṃdā  rato bhavati \N1
+%yaḥ paraniṃdā  rato bhavati \N2
+%    paraniṃdāṃ rato bhavati \U1
+%yaḥ paraniṃdā  rato bhavati// \U2
+%\om \D
+%-----------------------------
+%He, who loves it to criticise others, 
+%-----------------------------14
+\app{\lem[wit={ceteri}]{yaḥ}
+  \rdg[wit={U1}]{\om}}
+\app{\lem[wit={ceteri}]{paranindā}
+  \rdg[wit={B,L,U1}]{paraniṃdāṃ}}
+\app{\lem[wit={ceteri}]{rato}
+  \rdg[wit={B,L}]{\om}}
+\app{\lem[wit={ceteri}]{bhavati}
+  \rdg[wit={B,L}]{karoti}}/  
+%-----------------------------
+%durācāro bhavati/ \E
+%durācāro bhavati  \P
+% \om              \B
+% \om              \L
+%dūrācāro bhavati/ \N1
+%dūrācāro bhavati/ \N2
+%\om \D
+%dūrācāro bhavati  \U1
+%dūrācāro bhavati//  \U2
+%-----------------------------
+%who is behaving badly, 
+%-----------------------------15
+\app{\lem[wit={ceteri}]{dūrācāro bhavati}
+  \rdg[wit={B,L}]{\om}}/
+%-----------------------------
+%durmaitryānyasya            vastu na dadāti/ \E
+%bhrātur mitrasya yogyaṃ     vastu na dadāti \P
+%durmaitryānyasya            vastu na dadāti/ \B
+%bhrātu mitrasya ca yogyaṃ ca vastu na dadāti/ \N1
+%bhrātu mitrasya ca yogyaṃ    vastu na dadāti/ \N2
+%bhrātṛr mitraṃ ca yogyaṃ    vastu na dadāti \U1
+%bhrātur mitrasya yogyaṃ     vastu na dadāti// \U2
+%\om                               \L
+%\om \D
+%-----------------------------
+%who does not gives [single] thing, which benefits friend and brother,  
+%-----------------------------16
+\app{\lem[wit={P,U2},alt={bhrātur}]{bhrātu\skp{r-mi}}
+  \rdg[wit={N1,N2}]{bhrātu°}
+  \rdg[wit={U1}]{bhrātṛr}
+  \rdg[wit={B,E}]{dur°}
+}\app{\lem[wit={ceteri}]{mitrasya}
+  \rdg[wit={U1}]{mitraṃ}
+  \rdg[wit={B,E}]{maitryānyasya}}
+\app{\lem[wit={N2,U1}]{ca yogyaṃ}
+  \rdg[wit={N1}]{ca yogyaṃ ca}
+  \rdg[wit={P,U2}]{yogyaṃ}
+  \rdg[wit={B,E}]{\om}}
+vastu na dadāti/ 
+\note[type=philcomm, labelb=420, lem={bhrātur \ldots na dadāti}]{Sentence omitted in \getsiglum{L}.}
+%-----------------------------
+%[p.83]
+%ya asatyaṃ vadati/  yo yoga-----------------nindāṃ karoti/  \E
+%yo 'satyaṃ vadati   yo yogināṃ   manomadhye niṃdāṃ karoti   \P
+%so 'satyaṃ vadati/     yoginā    manomadhye niṃdāṃ karoti/  \N1
+%so 'satyaṃ vadati/     yoginā    manomadhye niṃdāṃ karoti/  \N2
+%so satyaṃ  vadati      yogināṃ   manomadhye ni-----karoti   \U1
+%yo 'satyaṃ vadati//    yogināṃ   manomadhye niṃdāṃ karoti// \U2
+%\om                                                         \B
+%\om                                                         \L
+%\om                                                         \D
+%-----------------------------
+%who does not speak the truth and despises yoga in spirit, 
+%-----------------------------17-18
+\note[type=source, labelb=421, labele=_421e, nosep]{cf. YSv (PT p. 847): stutir nindā na karttavyā sādhunā satyavādinā || yogānadhikāriṇam āha tatraiva ||}
+\note[type=philcomm, labelb=422, labele=_421e, lem={yo 'satyaṃ \ldots nindāṃ karoti}]{Both sentences omitted in \getsiglum{B} and \getsiglum{L}.}
+\app{\lem[wit={P,U2}]{yo}
+  \rdg[wit={N1,N2,U1}]{so}
+  \rdg[wit={E}]{ya}}
+\app{\lem[wit={ceteri}]{satyaṃ}
+  \rdg[wit={E}]{asatyaṃ}}
+vadati/
+\app{\lem[wit={E,P}]{yo}
+  \rdg[wit={ceteri}]{\om}}
+\app{\lem[wit={ceteri}]{yogināṃ}
+  \rdg[wit={N1,N2}]{yoginā}
+  \rdg[wit={E}]{yoga°}}
+\app{\lem[wit={ceteri}]{manomadhye}
+  \rdg[wit={E}]{\om}}
+\app{\lem[wit={ceteri}]{nindāṃ}
+  \rdg[wit={U1}]{ni°}}
+karoti/\linelabel{_421e}
+%-----------------------------
+%yasya manomadhye dayā na bhavati/ \E
+%yasya manomadhye dayā na bhavati  \P
+%yasya manomadhye dayā na bhavati/ \B
+%yasya manomadhye dayā na bhavati/ \L
+%yasya manomadhye dayā na bhavati  \N1
+%yasya manomadhye dayā na bhavati  \N2
+%\om \D
+%yasya manomadhye dayā na bhavati  \U1
+%yasya manomadhye dayā na bhavati// \U2
+%-----------------------------
+%In whose mind compassion does not arise.  
+%-----------------------------19
+\note[type=source, labelb=423, labele=_423e, nosep]{cf. YSv (PT p. 847): manomadhye dayā nāsti sadā yaḥ kalahapriyaḥ |}
+yasya manomadhye dayā na bhavati/ 
+%-----------------------------
+%yaḥ    kalaha--priyo    bhavati/ \E
+%yasya  kalaha--priyo    bhavati/ \P
+%yasya  kalahaṃ priyo na bhavati/ \B
+%yasya  kalahaṃ priyo na bhavati// \L
+%yaḥ    kalaha--priyo    bhavati/ \N1 [em. to  yasya kalahapriyo bhavati ||
+% \om N2
+%\om \D
+%yaḥ    kalaha--priyo    bhavati \U1
+%yasya  kalahaḥ priyo    bhavati// \U2
+%-----------------------------
+%who is one that has love for quarrel
+%-----------------------------20
+\note[type=philcomm, labelb=424, lem={yasya kalaha \ldots bhavati}]{Sentence omitted in \getsiglum{D} and \getsiglum{N2}.}
+\app{\lem[wit={E,N1,U1}]{yaḥ}
+  \rdg[wit={B,L,P,U2}]{yasya}}
+\app{\lem[wit={E,P,N1,U1}]{kalahapriyo}
+  \rdg[wit={B,L}]{kalahaṃ priyo}
+  \rdg[wit={U2}]{kalahaḥ priyo}}
+\app{\lem[wit={ceteri}]{bhavati}
+  \rdg[wit={B,L}]{na bhavati}}/\linelabel{_423e}
+%-----------------------------
+%svakāryakaraṇe  sāvadhāno bhavati/ \E
+%svakāryakaraṇe  sāvadhāno bhavati  \P
+%svakāryākaraṇeṃ sāvadhāno bhavati/ \B
+%svakāryākaraṇe  sāvadhāno bhavati// \L
+%svakāryyākaraṇe sāvadhāno bhavati/ \N1
+%svakāryyākaraṇā sāvadhāno bhavati/ \N2
+%\om \D
+%svakāryakaraṇe  sāvadhāno bhavati \U1
+%svakāryakaraṇe  sāvadhāno bhavati// \U2
+%-----------------------------
+%, attention arises for him regarding his selfish intentions; 
+%-----------------------------21
+\app{\lem[wit={E,P,U1,U2}]{svakāryakaraṇe}
+  \rdg[wit={L,N1}]{svakāryākaraṇe}
+  \rdg[wit={B}]{svakāryākaraṇeṃ}
+  \rdg[wit={N2}]{svakāryyākaraṇā}}
+sāvadhāno bhavati/
+%-----------------------------
+%guroḥ  kāryakaraṇe na dattacitto bhavati/ \E
+%guroḥ  kāryakaraṇe 'nādṛto??? bhavati        \P
+%guro   kārye karaṇe anādarano    bhavati/ \B [em. to anādaro = disrespect] 
+%guroḥ  kāryakaraṇe  anādare no    bhavati/ \Ĺ
+%guroḥ  kāryakaraṇe  ādaro na     bhavati/ \N1  [em. zu kāryakāraṇa]
+%guro   kāryakaraṇe  ādaro na     bhavati/ \N2
+%\om \D
+%guroḥ  kāryakaraṇe  ādaro na    bhavati  \U1
+%guro   kāryakaraṇe  nādṛto      bhavati//  \U2
+%-----------------------------------
+%disrespect arises towards the intentions of the teacher.
+%-----------------------------
+\note[type=source, labelb=425, labele=_425e, nosep]{cf. YSv (PT p. 847): svakāryalobhane śīlo gurukāryaparāṅmukhaḥ | etasmai ca na dātavyaṃ vaktavyaṃ tasya sannidhau |}
+\app{\lem[wit={ceteri}]{guroḥ}
+  \rdg[wit={B,N2,U2}]{guro}}
+\app{\lem[type=emendation, resp=egoscr]{kāryakāraṇe}
+  \rdg[wit={ceteri}]{kāryakaraṇe}
+  \rdg[wit={B}]{kārye karaṇe}}
+\app{\lem[wit={P,U2}]{'nādṛto}
+  \rdg[wit={N1,N2,U1}]{ādaro na}
+  \rdg[wit={B}]{anādarano}
+  \rdg[wit={L}]{anādare no}
+  \rdg[wit={E}]{na dattacitto}}
+bhavati/
+%-----------------------------
+%etādṛśasyāgre   na yogaḥ  kriyate   na paṭhyate// \E
+%etādṛśasyāgre   na yogaḥ  kriyate   na paṭhyate    \P
+%etādṛśasyāgre   na yogaḥ  kriyate/  na paṭhayate/ \B
+%etādṛśasyāgre   na yogaḥ  kriyate   na paṭhayate... \L
+%etādṛśasyāgre   na        kriyate/  na padyaṃte//  \N1
+%etādṛśasyāgre   na        kriyate/  na padyaṃte//  \N2
+%\om \D
+%etādṛśasya agre na        kriyate   na paṭhyate \U1
+%etādṛśasyāgre   na yogaḥ  kriyate// na paṭhyate// \U2
 %-------------------------
-%
-% \om                                                                                                                                                                \E
-% \om                                                                                                                                                                \L
-% \om                                                                                                                                                                \B
-% kriyāyogaḥ 1 jñānayogaḥ 2 caryāyogaḥ 3 haṭhayogaḥ 4 karmayogaḥ 5 layayogaḥ 6 dhyānayogaḥ 7 maṃtrayogaḥ 8 lakṣyayogaḥ 9 vāsanāyogaḥ 10 śivayogaḥ 11 brahmayogaḥ 12 advaitayogaḥ 13 siddhayogaḥ 14 rājayogaḥ 15 ete paṃcadaśayogāḥ \P
-%
-% kriyāyogaḥ / jñānayogaḥ / caryāyogaḥ / haṭhayogaḥ / karmayogaḥ / layayogaḥ / dhyānayogaḥ / maṃtrayogaḥ / lakṣyayogaḥ / vāsanāyogaḥ / śivayogaḥ / brahmayogaḥ / advaitayogaḥ / rājayogaḥ / siddhayogaḥ / ete paṃcadaśayogāḥ // \N1
-%
-% kriyāyogaḥ jñānayogaḥ caryāyogaḥ haṭhayogaḥ karmayogaḥ layayogaḥ dhyānayogaḥ maṃtrayogaḥ lakṣayogaḥ vāsanāyogaḥ śivayogaḥ brahmayogaḥ advaitayogaḥ rājayogaḥ siddhayogaḥ // ete paṃcadaśayogāḥ // \N2      
-%      
-% kriyāyogaḥ // jñānayogaḥ // caryāyogaḥ // haṭhayogaḥ // karmayogaḥ // layayogaḥ // dhyānayogaḥ // maṃtrayogaḥ // lakṣyayogaḥ // vāsanāyogaḥ // śivayogaḥ // brahmayogaḥ // advaitayogaḥ // rājayogaḥ // siddhayogaḥ // ete paṃcadaśayogāḥ // \D
-% \om                                                                                                                                                                         \D2      
-%
-% kriyāyogaḥ // jñānayogaḥ // tvaryāyogaḥ // haṭhayogaḥ // karmayogaḥ // layayogaḥ // dhyānayogaḥ maṃtrayogaḥ  lakṣayogaḥ  vāsanāyogaḥ  śivayogaḥ  brahmayogaḥ  advaitayogaḥ  rājayogaḥ  siddhayogaḥ ete paṃcadaśayogāḥ  \U1
-%
-% kriyāyogaḥ // jñānayogaḥ // caryāyogaḥ // haṭhayogaḥ // karmayogaḥ // nayayogaḥ // dhyānayogaḥ // maṃtrayogaḥ // lakṣyayogaḥ // vāsanāyogaḥ // śivayogaḥ // brahmayogaḥ // advaitayogaḥ // siddhayogaḥ // rājayogaḥ // evaṃ paṃcadaśāyogā bhavaṃti // \U2
-%-------------------------
-         kriyāyogaḥ 1\dd{}
-         jñānayogaḥ 2\dd{}
-         \app{\lem[wit={ceteri}]{caryāyogaḥ}
-          \rdg[wit={U1}]{tvaryāyogaḥ}} 3\dd{}
-        haṭhayogaḥ 4\dd{}
-        karmayogaḥ 5\dd{}
-        \app{\lem[wit={ceteri}]{layayogaḥ}
-          \rdg[wit={U2}]{nayayogaḥ}} 6\dd{}
-        dhyānayogaḥ 7\dd{}
-        mantrayogaḥ 8\dd{}
-        \app{\lem[wit={ceteri}]{lakṣyayogaḥ}
-          \rdg[wit={U1}]{lakṣayogaḥ}} 9\dd{}
-        vāsanāyogaḥ 10\dd{}
-        śivayogaḥ 11\dd{} 
-        brahmayogaḥ 12\dd{}
-        advaitayogaḥ 13\dd{} 
-        \app{\lem[wit={P,U2}]{siddhayogaḥ}
-          \rdg[wit={X}]{rājayogaḥ}} 14\dd{}
-        \app{\lem[wit={P,U2}]{rājayogaḥ}
-          \rdg[wit={ceteri}]{siddhayogaḥ}} 15\dd{}     
-        \app{\lem[wit={D,N1,P,U1}]{ete pañcadaśayogāḥ}
-          \rdg[wit={U2}]{evaṃ paṃcadaśāyogā bhavaṃti}}\dd{}\linelabel{_1e}
-      \end{prose}
- \ekddiv{
- head={[\uproman{2}. \textbf{kriyāyogasya lakṣaṇam}]},
-type=section,
- depth=2,
- n=II
-}
-\label{kriyayoga}
-%--------------------------        
-% \om                                      \E
-% \om                                      \L
-% \om                                      \B
-% idānīṃ kriyāyogasya lakṣaṇaṃ kathyate/   \P
-% idānīṃ kriyāyogasya lakṣaṇaṃ kathyate/   \N1
-% idānī  kriyāyogasya lakṣaṇaṃ kathyate//  \N2
-% idānīṃ kriyāyogasya lakṣaṇaṃ kathayate/  \D
-% \om                                      \D2
-% idānīṃ kriyāyogasya lakṣaṇaṃ kathyate/   \U1
-% atha   kriyāyogas   lakṣaṇaṃ          // \U2
-%--------------------------
-%Now the characteristic of the Yoga of [mental] action (\textit{kriyāyoga}) described.
-%--------------------------
-\begin{prose}
-        \app{\lem[wit={ceteri}]{idānīṃ}
-            \rdg[wit={N2}]{idānī}
-            \rdg[wit={U2}]{atha}}
-          \app{\lem[wit={ceteri}]{kriyāyogasya}
-            \rdg[wit={U2}]{kriyāyogas}} lakṣaṇaṃ
-          \app{\lem[wit={ceteri}]{kathyate}
-            \rdg[wit={D}]{kathayate}
-            \rdg[wit={U2}]{\om}}/
-\end{prose}
-\begin{tlg}
-  \noindent
-%--------------------------   
-% \om                                                    \E
-% \om                                                    \L
-% \om                                                    \B
-% kriyāmuktir    ayaṃ yogaḥ    svapiṇḍe siddhidāyakaḥ    \P
-% kriyāmuktir    ayaṃ yogaḥ /  svapiṇḍe siddhidāyakaḥ /  \N1
-% kriyāmukti    layaṃ yogaḥ    svapiṇḍe siddhidāyakaḥ /  \N2
-% kriyāmuktir    ayaṃ yogaḥ    svapiṇḍe siddhidāyakaḥ /  \D
-% \om                                                    \D2
-% kriyāyuktir    ayaṃ yogaḥ /  svapiṇḍe siddhidāyakaḥ /  \U1
-% kriyāmuktiḥ // ayaṃ yogaḥ    svapiṇḍe siddhidāyakaṃ // \U2 
-%--------------------------
-%This Yoga is liberation through [mental] action, it bestows success(\textit{siddhi}) in ones own body.
-%-------------------------- 
-   \tl{\note[type=source, labelb=4, labele=_4e, nosep]{ \approx  YSv (PT p. 831): kriyāmuktimayo (\textit{kriyāmuktir ayaṃ} YK 1.209) yogaḥ sapiṇḍisiddhidāyakaḥ (\textit{sapiṇḍe} YK 1.210) | yat kāromīti saṅkalpaṃ kāryārambhe manaḥ sadā ||}
-     \app{\lem[wit={ceteri}, alt={kriyāmuktir}]{kriyāmukti\skp{r-a}}
-    \rdg[wit={N2}]{kriyāmukti}
-    \rdg[wit={U2}]{kriyāmuktiḥ ||}
-}\app{\lem[wit={ceteri}, alt={ayaṃ}]{\skm{r-a}yaṃ}
-  \rdg[wit={N2}]{layaṃ}}
-\app{\lem[wit={ceteri}]{yogaḥ}
-  \rdg[wit={N1,U1}]{yogaḥ |}} svapiṇḍe
-\app{\lem[wit={ceteri}]{siddhidāyakaḥ}
-  \rdg[wit={U2}]{siddhidāyakaṃ}}/}\\
-%-------------------------
-% \om                                                    \E
-% \om                                                    \L
-% \om                                                    \B
-% yaṃ yaṃ karoti kallolaṃ kāryāraṃbhe manaḥ sadā         \P
-% yaṃ yaṃ karoti kallolaṃ kāryāraṃbhe manaḥ sadā/        \N1
-% yaṃ yaṃ karoti kallolaṃ kāryāraṃbhe manaḥ sadā//1//    \N2
-% yaṃ yaṃ karoti kallolaṃ kāryāraṃbhe manaḥ sadā/        \D
-% \om                                                    \D2
-% yaṃ yaṃ karoti kallolaṃ kāryāraṃbhe manaḥ sadā/ 1      \U1
-% yaṃ yaṃ karoti kallolaṃ kāryāraṃbhe manaḥ sadā/        \U2
-%--------------------------
-%Each wave the mind creates at the beginning of an action,
-%-------------------------- 
-\tl{yaṃ yaṃ karoti kallolaṃ kāryāraṃbhe manaḥ sadā/}\\\linelabel{_4e}
-%--------------------------
-% \om                                                        \E
-% \om                                                        \L
-% \om                                                        \B
-% tattataḥ   kuñcanaṃ kurvan kriyāyogas tato bhavet            \P
-% tattataḥ   kuñcanaṃ kurvan kriyāyogas ato bhava     //       \N1
-% tattataḥ   kūrcanaṃ kurvan kriyāyogas ato bhava     //       \N2
-% tattataḥ   kuñcanaṃ kurvan kriyāyogas ato bhava     //       \D
-% \om                                                          \D2
-% taṃkṛ taṃ  kuñcanaṃ kurvan kriyāyogas ato ?va      //1//    \U1
-% tatastataḥ kuṃcanaṃ kurvan kriyāyogas tato bhavet //1//     \U2
-%--------------------------
-%of all those one shall withdraw oneself. Then \textit{kriyāyoga} arises.
-%--------------------------
-\tl{\note[type=source, labelb=4x, nosep]{ \approx  YSv (PT p. 839): tatsāṅgācaraṇaṃ kurvan kriyāyogarato bhavet |}
-  \app{\lem[wit={ceteri}]{tattataḥ}
-    \rdg[wit={U2}]{tatas tataḥ}
-    \rdg[wit={U1}]{taṃkṛ taṃ}}
-  \app{\lem[wit={ceteri}]{kuñcanaṃ}
-    \rdg[wit={N2}]{kūrcanaṃ}}
-  kurvan-kriyāyoga\skp{s-ta}\app{\lem[wit={P,U2}, alt={tato bhavet}]{\skm{s-t}ato bhavet}
-    \rdg[wit={D,N1,N2}]{ato bhava}
-    \rdg[wit={U1}]{ato va}}\dd{} \begin{otherlanguage}{english}\uproman{2}.1\end{otherlanguage}\hskip-2pt\dd{}}\linelabel{_4e}
-\end{tlg}%\vspace*{\fill}
-\end{edition}
-\begin{translation}
-  \ekddiv{type=trans}
-   \ekddiv{
- head={[\uproman{1}. \textbf{Nature of Rājayoga}]},
-type=section,
- depth=2,
- n=I.1
-}
-\label{introtrans}
-\begin{tlate}
-\noindent
-Homage to Śrī Gaṇeśa. Now, the nature of Rājayoga is laid down. \\
-This is the result of Rājayoga\footnote{This statement seems unconnected to the definition of Rājayoga that follows.}: Rājayoga is that by which long-term durability of the body arises
-[and] even amongst manifold royal pleasures even amongst the manifold royal entertainments and spectacle.\footnote{The definition of Rājayoga alludes to the exceptionally wealthy lifestyle of Rāmacandra's audience.} This truly is Rājayoga. These are the varieties of this Rājayoga:\\
-\indent \textbf{1.} The Yoga of [mental] action (Kriyāyoga); \textbf{2.} the Yoga of knowledge (Jñānayoga); \textbf{3.} the Yoga of wandering (Caryāyoga);\footnote{The first three Yogas allude to the four \textit{pāda}s of the Śaiva \textit{āgama}s; namely \textit{kriyā}[\textit{pāda}], \textit{caryā}[\textit{pāda}], \textit{yoga}[\textit{padā}] and \textit{jñāna}[\textit{pāda}], see \citeauthor[2015: 77]{nishvasa2015}.} \textbf{4.} the Yoga of force (Haṭhayoga); \textbf{5.} the Yoga of deeds (Karmayoga); \textbf{6.} the Yoga of absorption (Layayoga); \textbf{7.} the Yoga of meditation (Dhyānayoga); \textbf{8.} the Yoga of Mantras (Mantrayoga); \textbf{9.} the Yoga of targets (Lakṣyayoga); \textbf{10.} Yoga of mental residues (Vāsanāyoga); \textbf{11.} the Yoga of Śiva (Śivayoga); \textbf{12.} the Yoga of Brahman (Brahmayoga); \textbf{13.} the Yoga of non-duality (Advaitayoga); \textbf{14.} the Yoga of the Siddhas (Siddhayoga); \textbf{15.} the Yoga of kings (Rājayoga). These are the fifteen Yogas.\footnote{The initial codification of fifteen \textit{yoga}s appears in \getsiglum{N1}, \getsiglum{N2}, \getsiglum{P}, \getsiglum{D}, \getsiglum{U1} and \getsiglum{U2}. It is ommitted in \getsiglum{E}, \getsiglum{L} and \getsiglum{B}. It is also absent in the \textit{Yogasaṃgraha}. However, it certainly os original since it crosses the two main branches of the stemma. The definitive source of the list of the fifteen Yogas presented at the beginning of the text is uncertain. Rāmacandra's text is largely based on the content and structure of the \textit{Yogasvarodaya} (YSv) as quoted in \citetitle{ramatosana} (Ed. pp. 831-858). In this text, however, the list is incomplete. YSv mentions the total amount of fifteen Yogas but names only eight subcategories of Rājayoga. Because of that, Rāmacandra might have seen the necessity to complete it. The other source he used for compiling his text is \citetitle{ssplonavla} (SSP) which, however, does not present such a list. A more detailed investigation of the fifteen Yogas can be found at p. \pageref{yogas_list}.}
-\end{tlate}
-\ekddiv{
- head={[\uproman{2}. \textbf{Characteristics of Kriyāyoga}]},
-type=section,
- depth=2,
- n=II.1
-}
-\begin{tlate}
-  \indent Now, the characteristic of Kriyāyoga, the Yoga of [mental] action, is described. \paragraph{\uproman{2}.1} This Yoga is liberation through [mental] action. It bestows success(\textit{siddhi}) in one's own body. Each wave the mind creates at the beginning of an action, of all those, one shall withdraw oneself. Then Kriyāyoga arises.\footnote{All four verses on Kriyāyoga were taken from the \textit{Yogsavarodaya} (YSv) as quotations in the \textit{Prāṇatoṣinī} (PT) and \textit{Yogakarṇikā} (YK). No sources for the following prose section can be identified.}
-  \flushpage
+%In front of someone like this yoga is neither done nor taught. 
+%-----------------------------23
+\app{\lem[wit={ceteri}]{etādṛśasyāgre}
+  \rdg[wit={U1}]{etādṛśasya agre}}
+na \app{\lem[wit={ceteri}]{yogaḥ}
+  \rdg[wit={N1,N2,U1}]{\om}}
+kriyate na \app{\lem[wit={E,P,U1,U2}]{paṭhyate}
+  \rdg[wit={N1,N2}]{padyaṃte}
+  \rdg[wit={B,L}]{paṭhayate}}/\linelabel{_425e}\\
+%-----------------------------
+%śrṛṇvan prītādikān  śabdān  paśyan rūpaṃ manoharam/ \E
+%śrṛṇvan gītādikān   śabdān  paśyan rūpaṃ manoharaṃ   \P
+%śrṛṇvan gītādikān   śabdān  paśyan rūpaṃ manoharaṃ/ \B
+%śṛṇvan  gītādikān   śabdān/ paśyan rūpaṃ manoharaṃ/ \N1
+%śuśvana gītādikāna  śabdāt/ paśyan rūpaṃ manoharaṃ// \N2
+%śṛṇvan  gītādikān   śabdān  paśyan rūpaṃ manoharaṃ// \L
+%śṛṇvan  gītādikān   śabdān  paśyat rūpaṃ manoharaṃ \U1
+%śrṛṇvan gītādikān// śabdān  paśyan rūpaṃ manoharam// \U2
+%\om \D
+%-----------------------------
+%While hearing the sound of music etc., while seeing heart pounding forms,  
+%-----------------------------24
+\app{\lem[wit={N1,L,U1},alt={śṛṇvan}]{śṛṇva\skp{n-gī}}
+  \rdg[wit={N2}]{śuśvana}
+  \rdg[wit={ceteri}]{śrṛṇvan}
+}\app{\lem[wit={ceteri},alt={gītādikān}]{\skm{n-gī}tādikān}
+  \rdg[wit={E}]{prītādikān}}\dd
+ \app{\lem[wit={ceteri},alt={śabdān}]{śabdā\skp{n-pa}}
+  \rdg[wit={N2}]{śabdāt |}
+}\app{\lem[wit={ceteri},alt={paśyan}]{\skm{n-pa}śya\skp{n-rū}}
+    \rdg[wit={U1}]{paśyat}
+  }\skm{n-rū}paṃ manoharaṃ\dd{}
+%-----------------------------
+%jāgrat                  sphuran  spṛśan sparśa---mṛdupriyam     svādān manoramān          bhrāmyan    deśān/ manoramān \E
+%jighran gaṃdhāṃś ca     surabhin spṛśan sparśaṃ  mṛḍupriyaṃ     svādān manoramān  khādan  bhrāmyan    deśān manoramān \P
+%jighran agachan       sphurabhi  spṛśaṃ          mṛdupriyaṃ     svādān manorathān khādavan bhrāman    deśān manoramān \B
+%jighran agachan        surabhin  spṛśaṃ          mṛdupriyaṃ     svādān manorathān khādavan bhrāman    deśān manoramān \L
+%jighran gaṃdhāṃ       śusurabhīn spṛśyanasya     mṛdupriyaṃ/    svādān manomān svādan      bhrāmye na deśān manoramān \N1
+%jighraṃ gaṃdhāṃ       śusurabhīn spṛśyanasyaṃ śarmṛdupriyaṃ     svādān manomān             bhrāmya na deśān manoramān \N2
+%\om \D
+%jighraṃ nāṃdhaś ca      surabhīn        sparśaṃ  mṛdupriyaṃ     svādān manoramān khādaṃta--bhrāmyan tveṣāṃn manoramān/ \U1 %%%302.jpg
+%jighran spṛśan  gaṃdhan surabhīn spṛśan sparśaṃ  mṛḍu// priyaṃ  svādān manoramān           bhrāmyan    deśān manoramān//  \U2
+%-----------------------------
+%while smelling fragnent scent, while touching lovely and soft touch, while eating food that pleases the mind, while travelling to beautiful places,    
+%-----------------------------25
+\app{\lem[wit={ceteri},alt={jighran}]{jighra\skp{n-ga}}
+  \rdg[wit={E}]{jāgrat}
+  \rdg[wit={U1}]{jighraṃ}
+}\app{\lem[wit={N1,N2},alt={gandhān}]{gandhā\skp{n-su}}
+  \rdg[wit={P}]{gaṃdhāṃś ca}
+  \rdg[wit={U1}]{nāṃdhaś ca}
+  \rdg[wit={B,P}]{agachan}
+  \rdg[wit={U2}]{spṛśan gaṃdhan}
+  \rdg[wit={E}]{\om}
+}\app{\lem[wit={U1,U2},alt={surabhīn}]{\skm{n-su}rabhī\skp{n-spṛ}}
+  \rdg[wit={E}]{sphuran}
+  \rdg[wit={P,L}]{surabhin}
+  \rdg[wit={B}]{sphurabhi}
+  \rdg[wit={N1,N2}]{śusurabhīn}
+}\app{\lem[wit={Y},alt={spṛśan}]{spṛśa\skp{n-spa}}
+  \rdg[wit={N1}]{spṛśyanasya}
+  \rdg[wit={N2}]{spṛśyanasyaṃ}
+  \rdg[wit={U1}]{\om}
+}\app{\lem[wit={P,U1,U2},alt={sparśaṃ}]{\skp{n-spa}rśaṃ}
+  \rdg[wit={E}]{sparśa°}
+  \rdg[wit={ceteri}]{\om}
+}\app{\lem[wit={ceteri}]{mṛḍupriyaṃ}
+  \rdg[wit={N2}]{śarmṛdupriyaṃ}
+  \rdg[wit={U2}]{mṛḍu || priyaṃ}}\dd{}
+svādā\skp{n-ma}\app{\lem[wit={ceteri},alt={manoramān}]{\skm{n-ma}noramā\skp{n-khā}}
+  \rdg[wit={B,L}]{manorathān}
+  \rdg[wit={N1,N2}]{manomān}
+}\app{\lem[wit={ceteri},alt={khādan}]{\skm{n-khā}da\skp{n-bhrā}}
+  \rdg[wit={B,L}]{khādavan}
+  \rdg[wit={U1}]{khādaṃta°}
+  \rdg[wit={N1}]{svādan}
+  \rdg[wit={E,N2}]{\om}
+}\app{\lem[wit={ceteri},alt={bhrāmyan}]{\skm{n-bhrā}mya\skp{n-de}}
+  \rdg[wit={B,L}]{bhrāman}
+  \rdg[wit={N1}]{bhrāmyena}
+  \rdg[wit={N2}]{bhrāmya na}
+}\app{\lem[wit={ceteri},alt={deśān}]{\skm{n-de}śā\skp{n-ma}}
+  \rdg[wit={U1}]{tveṣāṃn}
+}\skm{n-ma}noramān\dd{}
+    \end{prose}
+  \end{edition}
+  \begin{translation}
+    \ekddiv{type=trans}
+    \begin{tlate}
+      \paragraph{\uproman{58}.1 } Not because of love, not because of fear, not because of greed, not because of gift, not because of friendship, not because of hostility, not because of nobility, not because of service, shall yoga be taught in front of everyone.\\
+      
+He, who loves it to blame others; who loves to criticise others; who is behaving badly; who does not gives [single] thing, which benefits friend and brother; who does not speak the truth and despises yoga in spirit; in whose mind compassion does not arise; who is one that delights in quarrel; attention arises for him regarding his selfish intentions; [and] disrespect arises towards the intentions of the teacher. In front of someone like this yoga is neither done nor taught.\footnote{Show up to get things done!}\\
+
+While hearing the sound of music etc., while seeing heart pounding forms; while smelling fragnent scent, while touching lovely and soft touch, while eating food that pleases the mind, while travelling to beautiful places, \ldots
+\flushpage
     \end{tlate}
   \end{translation}
 \end{alignment}
-\pagebreak %after pp. 1-2
+\pagebreak %after pp.141-142
 \chapter{Appendix}
 \section{Figures}
 
