edition complete and few corrections

--- a/bindu.bib
+++ b/bindu.bib
@@ -1,3 +1,13 @@
+﻿@book{pratyabhijnahrdaya, 
+ title={Pratyabhijñāhṛdayam},
+ subtitle={The secret of recognition}, 
+ year={1987},
+ note={Original year of publication 1938}, 
+ publisher={Motilal Banarsidass}, 
+ address={Delhi},
+ keywords={printed},
+}
+
 @book{samgitaratna, 
  title={Saṃgītaratnākara},
  subtitle={Saṃgītaratnākara of Śārṅgadeva: with the Kalānidhi of Kallinātha and the Sudhākara of Siṃhabhūpāla},
@@ -8,6 +18,46 @@
  note={in Sanskrit - 2nd ed.},
  keywords={printed},
 }
+
+@book{merutantra, 
+title={Merutantra}, 
+editor={Raghunāthaśāstri, Paṇḍita}, 
+year={1908}, 
+publisher={Śrivenkateśvara},
+address={Bombay}, 
+}
+
+@book{hemacandras, 
+title={Yogaśāstra}, 
+subtitle={A HANDBOOK ON THE THREE JEWELS OF JAINISM THE YOGAŚĀSTRA OF HEMACANDRA}, 
+editor={Qvarnström, Olle},
+year={2012},
+volume={29},
+series={Pandit Nathuram Premi Research Series},  
+publisher={Hindi Granth Karyalay},
+address={Mumbai}, 
+keywords={printed}, 
+} 
+
+
+@book{svacchandatantra, 
+ title={Svacchandatantra}, 
+ subtitle={Svacchandatantra with the commentary (Svacchandoddyota) of Rājānaka Kṣemarāja}, 
+ editor={Śāstrī, Madhusūdan Kaul},
+ year={1921}, 
+ note={KSTS 31, 38, 44, 48, 51, 53, 56},
+ address={Bombay}, 
+ publisher={Nirnaya-sagar Press}, 
+ } 
+
+@book{malinivijay, 
+ title={Mālinīvijayottaratantra},
+ subtitle={Mālinīvijayottaratantram}, 
+ editor={Śāstrī, Madhusūdana Kaula},
+ year={1922}, 
+ address={Srinagar}, 
+ note={cf. Vasudeva 2004}, 
+} 
 
 @book{ramayana, 
 title={Rāmāyaṇa}, 
@@ -22,7 +72,7 @@ keywords={printed},
 
 
 @book{mainkar2004, 
-title={Sāṃkhyakārikā}, 
+title={Sāṅkhyakārikā}, 
 subtitle={Sāṃkhyakārikā of Īśvarakṛṣṇa - With the Commentary of Gauḍapāda - Translated into Endlish with an Exhaustive Introcution and Notes}, 
 year={2004}, 
 editor={Mainkar, T.G.}, 
@@ -1562,6 +1612,30 @@ keywords={seclit},
    keywords={codex},
 }
 
+@codex{stb1,
+   title={Siddhāntatattvabindu},
+   %author={Devendra},
+   note={Ms. No. NGMPP, MA 905-3, Paper, Newari},
+   address={National Archives Kathmandu},
+   %shorthand={S\textlowerscript{1}},
+   keywords={codex},
+}
+
+@codex{stb2,
+   title={Siddhāntatattvabindu},
+   %author={Devendra},
+   note={Ms. No. NGMPP, E 1189-13, Paper, Devanāgarī},
+   address={National Archives Kathmandu},
+   %shorthand={S\textlowerscript{2}},
+   keywords={codex},
+}
+
+@codex(guhyanisvasa, 
+  title={Guhyasūtra}, 
+  subtitle={Guhyasūtra of the Niśvāsatattvasaṃhitā}, 
+  note={NGMPP A 41/14 and NGMPP A 159/18},
+  keywords={codex}, 
+}
 
 @codex{rajayoga, 
   title={Rājayogaḥ},
@@ -2203,9 +2277,10 @@ address={Delhi},
 }
 
 @book{mahabharata,
-   title={The Mahābhārata: For the first time Critically Edited, 19 Volumes},
+   title={Mahābhārata},
+   subtitle={The Mahābhārata: For the first time Critically Edited, 19 Volumes},
    editor={Sukthankar, V.S. and Belvalkar, S. K.},
-   year={1933-69},
+   year={1969},
    publisher={Bhandarkar Oriental Research Institute},
    address={Poona},
    keywords={printsource},
