--- a/voredition.tex
+++ b/voredition.tex
@@ -102,6 +102,16 @@ The authenticity of the list specifying the fifteen Yogas at the beginning of th
 \note[type=philcomm, labelb=_1e, labele=_1e, lem={urayogaḥ}]{The term \textit{urayoga} in YSv (PT) is uncertain. Birch suggests it might result from a corruption of \textit{lakṣyayoga} since it appears in the text. However, explaining the origin of the corruption is complex. Sellmer speculates it could be an abbreviation of \textit{uragayoga} (``Snake Yoga''), possibly a synonym for \textit{kuṇḍalinīyoga}, but this is problematic as the term is unattested elsewhere.} 
 
 
+%%note in birch 2014 reincarnations of the king -- note 54! therē types! 
+54. In the commentary called the Saubhågyabhåskara on the Çr⁄lalitå-
+sahasranåmastotra (180), the eighteenth-century Bhåskararåya men-
+tions Såkhya, Tåraka, and Amanaska as the three types of Råjayoga
+(råjayogo ’pi såkhyatårakåmanaskabhedåt trividhaa). The Tårakayoga/
+Amanaskayoga division may derive from South India, for it is present in
+the Amanaska’s South Indian recension (but not the North Indian and
+Nepalese) as well as the South Indian redactions of the Advayatårako-
+pani‚at and Ma~alabråhma~opani‚at.
+
 \chapter{Uncovering the Fundamental Teachings of Yogatattvabindu: A Textual Network}
 
 \begin{itemize}
